<resources>
    <string name="web_portal_label">Website:</string>
    <string name="opensource_website_label">Github:</string>
    <string name="web_portal">https://shenqi.internetware.cn</string>
    <string name="opensource_website">https://github.com/sqmeeting</string>
    <string name="app_name">SQMeetingCE</string>
    <string name="build_version">Version: </string>
    <string name="main_title">ShenQi</string>
    <string name="sign_in">Sign In</string>
    <string name="join_meeting">Join Meeting</string>
    <string name="set_server_notice">Please set server address before logging in or joining meeting!</string>
    <string name="setting_notice">Go to set</string>
    <string name="settings">Settings</string>
    <string name="setting_server">Server Setting</string>
    <string name="setting_server_ip_title">Server Address</string>
    <string name="input_server_address">Input server address</string>
    <string name="intelligent_noise_reduction">Intelligent Noise Reduction</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="setting_saved_notice">Saved successfully</string>
    <string name="setting_recording_title">My Recordings</string>
    <string name="setting_recording">Access the following SQMeeting Web Portal with a computer browser to view:</string>
    <string name="copy_website_notice">Website address has been copied to the clipboard</string>
    <string name="btn_join_meeting">Join</string>
    <string name="join_meeting_audio_only" >Voice Meeting</string>
    <string name="join_meeting_audio_only_notice">Video and screen sharing don\'t work in voice mode</string>
    <string name="meeting_id_edit_hint">Input meeting ID</string>
    <string name="display_name_edit_hint">Input your name</string>
    <string name="user_sign_in">User Sign In</string>
    <string name="username_or_account">Username/Account</string>
    <string name="user_password">Password</string>
    <string name="instant">Instant</string>
    <string name="join">Join</string>
    <string name="schedule">Schedule</string>
    <string name="enter_meeting">Enter Meeting</string>
    <string name="camera_on">Turn on Camera</string>
    <string name="use_my_own_meeting_id">Use Personal Meeting ID</string>
    <string name="no_meeting_room_notice">No Personal Meeting ID</string>
    <string name="done">Done</string>
    <string name="text_history_meeting">History</string>
    <string name="text_scheduled_meeting">Scheduled</string>
    <string name="clear_history_meeting">Clear History</string>
    <string name="text_scheduled_meeting_refresh_success">Refresh successfully</string>
    <string name="text_no_history_meeting">No history</string>
    <string name="text_no_scheduled_meeting">No scheduled meetings</string>
    <string name="scheduled_meeting_cancel_notice">Meeting canceled</string>
    <string name="scheduled_meeting_update_notice">Meeting updated</string>
    <string name="scheduled_meeting_failed_notice">Schedule meeting failed</string>
    <string name="scheduled_meeting_cancel_failed_notice">Failed to cancel scheduled meeting</string>
    <string name="scheduled_meeting_update_failed_notice">Failed to update scheduled meeting</string>
    <string name="meeting_id_label">Meeting ID: </string>
    <string name="meeting_name_postfix">\'s meeting</string>
    <string name="instant_meeting_name_postfix">\'s instant meeting</string>
    <string name="schedule_meeting_postfix">\'s meeting</string>
    <string name="meeting_details_title">Meeting Detail</string>
    <string name="delete_meeting">Delete</string>
    <string name="meeting_time">Start Time</string>
    <string name="meeting_id">Meeting ID</string>
    <string name="meeting_spent_time">Duration</string>
    <string name="meeting_password">Password</string>
    <string name="today">Today</string>
    <string name="invite_you_to_meeting">invites you to a SQMeeting meeting</string>
    <string name="password_of_meeting">Meeting Password</string>
    <string name="cancel_meeting">Cancel Meeting</string>
    <string name="scheduled_meeting_status_started">In Progress</string>
    <string name="scheduled_meeting_status_starting">Upcoming</string>
    <string name="scheduled_meeting_status_invited">Invited</string>
    <string name="meeting_introduction">Meeting Description</string>
    <string name="start_time">Start Time</string>
    <string name="meeting_duration">Duration</string>
    <string name="time_zone">Time Zone</string>
    <string name="invited_users">Invited Users</string>
    <string name="meeting_rate">Call Rate</string>
    <string name="join_time">Early Joining Time</string>
    <string name="join_time_30_minutes">30 minutes</string>
    <string name="join_time_any_time">Any time</string>
    <string name="mute_in_meeting">Mute When Join</string>
    <string name="allow_visitors_to_dial_in">Allow Guest</string>
    <string name="shared_screen_watermark">Screen Sharing Watermark</string>
    <string name="repetition_frequency">Frequency</string>
    <string name="no_frequency">No</string>
    <string name="repetition_end">End Series</string>
    <string name="repetition_end_content">on %s %s meetings in total</string>
    <string name="repetition_frequency_day">Daily</string>
    <string name="repetition_frequency_week">Weekly</string>
    <string name="repetition_frequency_month">Monthly</string>
    <string name="repetition_frequency_setting">End Series Settings</string>
    <string name="repetition_frequency_desc">The meeting will repeat every %1$s </string>
    <string name="repetition_frequency_title">Recur every</string>
    <string name="repetition_frequency_content">Every %1$s</string>
    <string name="repetition_meeting_end_date">Due Date</string>
    <string name="repetition_week_day">Select the repeat day(s) of the week</string>
    <string name="repetition_month_day">Select the repeat date(s)</string>
    <string name="not_cancel_selected_meeting_start_date">Unable to cancel the selected meeting start date</string>
    <string name="repetition_type_one_day">day</string>
    <string name="repetition_type_one_week">week</string>
    <string name="repetition_type_one_month">month</string>
    <string name="repetition_type_day">&#160;day(s)</string>
    <string name="repetition_type_day_th">th</string>
    <string name="repetition_type_week">&#160;week(s)</string>
    <string name="repetition_type_month">&#160;month(s)</string>
    <string name="repetition_adj"> </string>
    <string name="meeting_recurrence">Recurring</string>
    <string name="recurrence_meeting">Recurring Meeting</string>
    <string name="recurrence_content">The meeting will repeat on %1$s </string>
    <string name="recurrence_end">End on %s %s remaining meetings</string>
    <string name="edit_meeting">Edit Current Meeting</string>
    <string name="edit_recurrence_meeting">Edit Recurring Meeting</string>
    <string name="edit_meeting_schedule">Edit Recurring Meeting</string>
    <string name="save_changes">Done</string>
    <string name="copy_invitation">Copy Invitation</string>
    <string name="edit_recurrence_meetings">Edit Recurring Meeting</string>
    <string name="cancel_recurrence_meetings">Cancel Recurring Meeting</string>
    <string name="saving_calendar">Saving...</string>
    <string name="btn_schedule">Schedule</string>
    <string name="year_picker">y</string>
    <string name="month_picker">m</string>
    <string name="day_picker">d</string>
    <string name="hour">h</string>
    <string name="minute">min</string>
    <string name="second">sec</string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="recurrence_remain">, %s remaining meetings</string>
    <string name="edit_meeting_btn">Edit Meeting</string>
    <string name="get_recurrence_meetings_fail">Get recurrence meetings failed</string>
    <string name="start_time_valid_notice">The start time should not be earlier than the current time</string>
    <string name="duration_time_valid_notice">Duration can not be 0 minutes.</string>
    <string name="meeting_name_valid_notice">Meeting topic can not be empty. </string>
    <string name="start_time_later_than_recurrence_start_time">The start time should be later than the start time of the recurrence meeting.</string>
    <string name="start_time_later_than_previous_single_meeting_end_time">Start time cannot be earlier than the end time of the previous meeting in recurring meeting.</string>
    <string name="end_time_earlier_than_latter_single_meeting_start_time">End time cannot be later than the start time of the next meeting in recurring meeting.</string>
    <string name="start_time_earlier_than_recurrence_end_time">The start time should be earlier than the end time of the recurrence meeting.</string>
    <string name="rate_128k">128K</string>
    <string name="rate_512k">512K</string>
    <string name="rate_1m">1024K</string>
    <string name="rate_2m">2048K</string>
    <string name="rate_2560K">2560K</string>
    <string name="rate_3m">3072K</string>
    <string name="rate_4m">4096K</string>
    <string name="rate_6m">6144K</string>
    <string name="rate_8m">8192K</string>
    <string name="open_shared_screen_watermark">Enable Screen Sharing Watermark</string>
    <string name="watermark_style">Watermark Style</string>
    <string name="single">Single</string>
    <string name="multiple">Multiple</string>
    <string name="single_watermark_effect">Single watermark effect</string>
    <string name="watermark_note">Watermark will be embedded in the shared content.</string>
    <string name="add_meeting_introduction_title">Add meeting description</string>
    <string name="meeting_introduction_hint">Input meeting description</string>
    <string name="maximum_number_of_participants_title">Maximum number of participants</string>
    <string name="meeting_participants_limitation_content">Maximum number of participants is 100</string>
    <string name="cancel_meeting_content">All participants can not join this meeting once canceled</string>
    <string name="cancel_meeting_positive_btn">Yes</string>
    <string name="cancel_meeting_negative_btn">No</string>
    <string name="cancel_meeting_title1">Are you sure you want to cancel this meeting?</string>
    <string name="cancel_meeting_content1">Cancel the entire series as well</string>
    <string name="cancel_meeting_title2">Cancel Recurring Meeting?</string>
    <string name="add_user">Add user</string>
    <string name="added_Users_title">Added Users</string>
    <string name="search_hint">Search</string>
    <string name="search_results">Results</string>
    <string name="no_search_result_prefix">No\"</string>
    <string name="no_search_result_postfix">\"related results</string>
    <string name="edit_btn">Edit</string>
    <string name="next">Next</string>
    <string name="added_user_number">Added %1$s users</string>
    <string name="user_information_title">Personal Info</string>
    <string name="user_information_account">Account</string>
    <string name="user_information_password">Update Password</string>
    <string name="user_sign_out">Sign Out</string>
    <string name="user_update_password">Update Password</string>
    <string name="user_old_password">Old</string>
    <string name="user_new_password">New</string>
    <string name="user_confirm_password">Confirm</string>
    <string name="user_old_password_hint">Old password</string>
    <string name="user_new_password_hint">Set new password</string>
    <string name="user_confirm_password_hint">Confirm new password</string>
    <string name="sign_in_wrong">Incorrect account or password</string>
    <string name="btn_back" >Cancel </string>
</resources>