<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_white"
    tools:context=".ui.component.SetServerFragment">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/title_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent">


        <ImageButton
            android:id="@+id/back_btn"
            style="@style/TitleBarButtonStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/TitleBarTextStyle"
            android:text="@string/setting_server"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </android.support.constraint.ConstraintLayout>

    <View
        android:id="@+id/separator"
        style="@style/SeparatorStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_bar_layout" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/server_address_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator">

        <TextView
            android:id="@+id/setting_server_ip_title"
            style="@style/TitleRowStyle"
            android:text="@string/setting_server_ip_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_server_address"
            style="@style/EditTextStyle"
            android:ems="10"
            android:maxLength="50"
            android:text=""
            android:hint="@string/input_server_address"
            android:textColorHint="@color/text_color_hint"
            android:textCursorDrawable="@drawable/edit_text_cursor"
            android:saveEnabled="false"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setting_server_ip_title" />


    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/server_address_input_layout">

    <Button
        android:id="@+id/server_cancel_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_1"
        android:background="@drawable/gray_btn"
        android:text="@string/btn_cancel"
        android:textColor="@color/text_color_gray"
        android:textAllCaps="false"
        android:padding="8dp"
        app:layout_constraintWidth_percent="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/server_save_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_1"
        android:background="@drawable/bg_blue_btn"
        android:text="@string/btn_save"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:padding="8dp"
        app:layout_constraintWidth_percent="0.475"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>