<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_white"
    tools:context=".ui.component.ScheduleMeetingRateFragment">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/title_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_btn"
            style="@style/TitleBarButtonStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/TitleBarTextStyle"
            android:text="@string/join_time"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_bar_layout">

        <TextView
            android:id="@+id/thirty_minutes"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingStart="20dp"
            android:textColor="@color/text_color_common"
            android:textSize="@dimen/title_text_size_1"
            android:gravity="center_vertical"
            android:background="@drawable/menu_item_bg"
            android:text="@string/join_time_30_minutes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/thirty_minutes_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:paddingEnd="20dp"
            android:src="@drawable/icon_selected"
            app:layout_constraintEnd_toEndOf="@+id/thirty_minutes"
            app:layout_constraintBottom_toBottomOf="@+id/thirty_minutes"
            app:layout_constraintTop_toTopOf="@+id/thirty_minutes"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/any_time"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingStart="20dp"
            android:textColor="@color/text_color_common"
            android:textSize="@dimen/title_text_size_1"
            android:gravity="center_vertical"
            android:background="@drawable/menu_item_bg"
            android:text="@string/join_time_any_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/thirty_minutes" />

        <ImageView
            android:id="@+id/any_time_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:paddingEnd="20dp"
            android:src="@drawable/icon_selected"
            app:layout_constraintBottom_toBottomOf="@+id/any_time"
            app:layout_constraintEnd_toEndOf="@+id/any_time"
            app:layout_constraintTop_toTopOf="@+id/any_time"
            android:visibility="invisible"/>

    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>